[gd_scene load_steps=12 format=3 uid="uid://bpqitovbxmodo"]

[ext_resource type="Script" path="res://SoundEffects.gd" id="1_v281g"]
[ext_resource type="AudioStream" uid="uid://dro6y8ka60xuk" path="res://Sounds/CursorSound.wav" id="2_a3pd7"]
[ext_resource type="AudioStream" uid="uid://cxoys4fhd0slv" path="res://Sounds/Walking.wav" id="3_rlff5"]
[ext_resource type="AudioStream" uid="uid://dm6yowl0w2yfe" path="res://Sounds/Select.wav" id="4_f2wrk"]
[ext_resource type="AudioStream" uid="uid://dum5ip3ot0yr5" path="res://Sounds/Dialogue.wav" id="5_0ptym"]
[ext_resource type="AudioStream" uid="uid://nqifbnfrmcpm" path="res://Sounds/Hit1.wav" id="6_8o2f0"]
[ext_resource type="AudioStream" uid="uid://b01l2e8wmv6ia" path="res://Sounds/Hit2.wav" id="7_p2lfh"]
[ext_resource type="AudioStream" uid="uid://vfa8j7ins5ec" path="res://Sounds/PhaseChange.wav" id="8_dk584"]
[ext_resource type="AudioStream" uid="uid://c2vfm6aw72tvu" path="res://Sounds/MenuMove.wav" id="9_5l3ca"]
[ext_resource type="AudioStream" uid="uid://daca4kf2xl7cd" path="res://Sounds/Death.wav" id="9_wug4y"]
[ext_resource type="AudioStream" uid="uid://bm8rvosctm26s" path="res://Sounds/Miss.wav" id="11_3rnvw"]

[node name="Node" type="Node"]
script = ExtResource("1_v281g")

[node name="CurSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a3pd7")
volume_db = -7.924
pitch_scale = 2.75

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rlff5")
volume_db = -10.306
pitch_scale = 1.97

[node name="CurSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_f2wrk")
volume_db = -5.39
pitch_scale = 1.73

[node name="DialogueProgressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0ptym")
volume_db = -18.739
pitch_scale = 1.86

[node name="HitSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8o2f0")
volume_db = -6.558
pitch_scale = 0.76

[node name="HitSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_p2lfh")
volume_db = -7.495
pitch_scale = 0.75

[node name="PhaseChangeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_dk584")
volume_db = -14.991
pitch_scale = 0.75

[node name="MenuCurSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5l3ca")
volume_db = -19.536
pitch_scale = 4.0

[node name="DeathRemoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wug4y")
volume_db = -17.408
pitch_scale = 0.93

[node name="MissSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_3rnvw")
volume_db = -19.093
pitch_scale = 0.78
